# e2xgrader-personalized-exchange

./: LICENSE  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.md  index.rst
docs/source/configuration/: configuration_options.md
docs/source/getting_started/: activate_exchange.md  installation.md
e2xgrader_personalized_exchange/: __about__.py  config.py
e2xgrader_personalized_exchange/exchange/: collect.py  exchange.py  fetch_assignment.py  fetch_feedback.py  list.py  release_assignment.py  release_feedback.py  submit.py
e2xgrader_personalized_exchange/exporter/: __init__.py  exporter.py
