[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e2xgrader-personalized-exchange"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Tim Metzler", email = "tim.metzler@h-brs.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jinja2",
  "weasyprint"
]

[project.urls]
Documentation = "https://github.com/e2xgrader/e2xgrader-personalized-exchange#readme"
Issues = "https://github.com/e2xgrader/e2xgrader-personalized-exchange/issues"
Source = "https://github.com/e2xgrader/e2xgrader-personalized-exchange"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pydata-sphinx-theme",
  "ruff",
  "sphinx",
  "tbump",
]

[tool.hatch.version]
path = "e2xgrader_personalized_exchange/__about__.py"

[tool.tbump]
github_url = "https://github.com/e2xgrader/e2xgrader-personalized-exchange"

[tool.tbump.version]
current = "0.0.1"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<pre>                                      # pre-release
        -
        (?P<pre_l>(a|b|c|rc|alpha|beta|pre|preview))
        [-\.]?
        (?P<pre_n>[0-9]+)?
    )?
    (?:
       \+
       (?P<build>
            [0-9A-Za-z][0-9A-Za-z-_]*            # non-hyphen/dash leading identifier
            (?:
                (?:\.[0-9A-Za-z-_]+)*            # dot-prefixed identifier segments
            \.                                   # Final dot-delimited segment
                [0-9A-Za-z_-]*                   # non-hyphen/dash trailing identifier
                [0-9A-Za-z]
            )?
        )
   )?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# Files with the version to update
[[tool.tbump.file]]
src = "e2xgrader_personalized_exchange/__about__.py"

[[tool.tbump.file]]
src = "docs/source/conf.py"

[tool.ruff]
line-length = 100
ignore-init-module-imports = true
select = ["F", "E", "I"]
